src/test/deca/syntax/valid/SansObjet/Println-Mod.deca
// Description:
//    Printing a modulo
//
// Results:
//    tree with all variables as branch of println
//
// Historique:
//    cree le 08/01/2022

{
        println(x % y);
}
