src/test/deca/syntax/invalid/HelloWorld/Println-OneEscap.deca
// Description:
//    String with one escape char
//
// Results:
//    test_lex : error line 12 on the whole string
//
//
// History:
//    cree le 08/01/2022

{
println("\");
}